Let "osapi_volume_listen" can be configurable
When setup cinder in multiple nodes, cinder-api and cinder-volume
will not exist in same node, so we should avoid value of
"osapi_volume_listen" to be "0.0.0.0" and should set it as
the ip of volume api host.

Change-Id: I6daa46d497297e8e4ab9faa2caa953d242cc424e
Closes-bug: #1305157

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -215,7 +215,7 @@ quota_driver=<%= node["openstack"]["block-storage"]["quota_driver"] %>
 ####          periodic task scheduler to reduce stampeding. (Disable by
 ####          setting to 0)
 
-# osapi_volume_listen=0.0.0.0
+osapi_volume_listen=<%= @volume_api_address %>
 #### (StrOpt) IP address for OpenStack Volume API to listen
 
 # osapi_volume_listen_port=8776
