Get the vCenter password from databag for cinder
1. Add new attribute openstack_vmware_secret_name to indicate the
databag secret key
2. Get the password from databag if dev mode is false
3. Update the test cases

Implements: blueprint vmware-password-databag

Change-Id: Id6872d38c255067a4991aceaa0bf6fb400cce1c8

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -901,7 +901,7 @@ vmware_host_username = <%= node['openstack']['block-storage']['vmware']['vmware_
 
 # Password for authenticating with VMware ESX/VC server.
 # (string value)
-vmware_host_password = <%= node['openstack']['block-storage']['vmware']['vmware_host_password'] %>
+vmware_host_password = <%= @vmware_host_pass %>
 
 <% if node['openstack']['block-storage']['vmware']['vmware_wsdl_location'] -%>
 # Optional VIM service WSDL Location e.g
