Add support for misc options in cinder.conf
Add misc_cinder in cinder.conf like misc_nova.
Add test
Closes-Bug: #1314105
Change-Id: Ia23809e33dd1b64e276d373ce87355dbecf857e9

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -976,3 +976,9 @@ gpfs_sparse_volumes = <%= node['openstack']['block-storage']['gpfs']['gpfs_spars
 gpfs_storage_pool = <%= node['openstack']['block-storage']['gpfs']['gpfs_storage_pool'] %>
 <% end %>
 
+# Misc options
+<% if node["openstack"]["block-storage"]["misc_cinder"] %>
+<% node["openstack"]["block-storage"]["misc_cinder"].each do |m| %>
+<%= m %>
+<% end %>
+<% end %>
