Add missing AMQP options to cinder.conf
Add more AMQP and QPID configuration options
to the cinder configuration file. This enables
users to use QPID federation support and also
use durable queues for rabbitmq or QPID.

Change-Id: I2293f1b718dda8f3be889b3a4d241fce7713ece2

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -349,6 +349,9 @@ rpc_response_timeout=<%= node["openstack"]["block-storage"]["rpc_response_timeou
 #### (ListOpt) Modules of exceptions that are permitted to be recreatedupon
 ####           receiving exception data from an rpc call.
 
+# from oslo/messaging/_drivers/amqp.py
+amqp_durable_queues=<%= node['openstack']['mq']['block-storage']['durable_queues'] %>
+amqp_auto_delete=<%= node['openstack']['mq']['block-storage']['auto_delete'] %>
 
 <% if @mq_service_type == "rabbitmq"  %>
 
@@ -461,6 +464,9 @@ qpid_protocol=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["protocol"] %
 
 qpid_tcp_nodelay=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["tcp_nodelay"] %>
 #### (BoolOpt) Disable Nagle algorithm
+
+qpid_topology_version=<%= node['openstack']['mq']['block-storage']['qpid']['topology_version'] %>
+#### (IntOpt) See oslo/messaging/_drivers/impl_qpid.py for details
 
 notification_topics=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["notification_topic"] %>
 #### (ListOpt) AMQP topic used for openstack notifications
