Add attribute for ibm nas stroage driver ibmnas_platform_type
* Add new ibmnas_platform_type attribute
* Fix minor bug with nas_ssh_port

Change-Id: I147fbb75cf75357f578e4f84a0d898149be9b1d0
Closes-Bug: #1370574

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -848,6 +848,10 @@ nas_password=<%= @ibmnas_pass %>
 
 nas_ssh_port=<%= node["openstack"]["block-storage"]["ibmnas"]["nas_ssh_port"] %>
 #### (StrOpt) IP address of IBMNAS storage
+
+ibmnas_platform_type=<%= node["openstack"]["block-storage"]["ibmnas"]["ibmnas_platform_type"] %>
+#### (StrOpt) IBMNAS platform type to be used as backend storage
+
 <% end %>
 
 ######## defined in cinder.volume.xiv ########
