Configure glance_api_insecure and glance_api_servers
This change adds some attributes into the cookbook so
that they are configurable. They are mainly to configure
for glance_api_insecure and make glance_api_servers to be
prefixed with scheme(http or https).

Change-Id: I79e04b47918fe1ec0b45472bd2cec9afa73d5897
Closes-Bug: #1383619

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -81,9 +81,12 @@ glance_host=<%= @glance_host %>
 glance_port=<%= @glance_port %>
 #### (IntOpt) default glance port
 
-# glance_api_servers=$glance_host:$glance_port
+glance_api_servers=<%= @glance_scheme %>://<%= @glance_host %>:<%= @glance_port %>
 #### (ListOpt) A list of the glance api servers available to cinder
-####           ([hostname|ip]:port)
+####           ([http|https]://[hostname|ip]:port)
+
+glance_api_insecure=<%= node['openstack']['block-storage']['image']['glance_api_insecure'] %>
+#### (BoolOpt) Allow to perform insecure SSL (https) requests to 'glance'
 
 # glance_num_retries=0
 #### (IntOpt) Number retries when downloading an image from glance
