Allow san_password attribute for svc driver
* add san_password= for storwize
* remove unused san_password attributes, get_password method is used
* add tests for password both storewize and solidfire

Change-Id: I4afde431332ca914d078bc3e30362ef22961016f
Closes-Bug: #1384085

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -744,6 +744,10 @@ san_login=<%= node["openstack"]["block-storage"]["storwize"]["san_login"] %>
 san_private_key=<%= node["openstack"]["block-storage"]["storwize"]["san_private_key"] %>
 #### (StrOpt) Filename of private key to use for SSH authentication
 
+san_password=<%= @storwize_pass %>
+#### (StrOpt) Password for SAN controller
+
+
 <% else %>
 # san_thin_provision=true
 #### (BoolOpt) Use thin provisioning for SAN volumes?
