Add glance_api_version to cinder config
This allows the administrator of the cloud the ability to specify
the glance API version.  This is required for features such as
Copy on Write (CoW) as Glance's v1 API does not expose enough
information to allow Cinder to CoW the image.

Change-Id: I3ba80207c22916629d210a23aad94bd143d2b00e
Co-Authored-By: Craige McWhirter <craige.mcwhirter@anchor.com.au>
Closes-bug: #1390345

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -94,6 +94,9 @@ glance_ca_certificates_file=<%= node['openstack']['block-storage']['image']['gla
 # glance_num_retries=0
 #### (IntOpt) Number retries when downloading an image from glance
 
+glance_api_version=<%= node['openstack']['block-storage']['image']['glance_api_version'] %>
+#### (IntOpt) Version of the glance API to use
+
 # scheduler_topic=cinder-scheduler
 #### (StrOpt) the topic scheduler nodes listen on
 
