Add default_volume_type to cinder config
This allows the administrator of a cloud with multiple backends to
define which volume is the default when a user creats a volume without
specifying a volume type.

Change-Id: I1bb94dc1283e50645e4aece600acc52ae17db56b
Co-Authored-By: Craige McWhirter <craige.mcwhirter@anchor.com.au>
Closes-Bug: #1389292

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -614,6 +614,8 @@ volume_driver=<%= node["openstack"]["block-storage"]["volume"]["driver"] %>
 # volume_force_update_capabilities=false
 #### (BoolOpt) if True will force update capabilities on each check
 
+# Default volume type to use (string value)
+default_volume_type=<%= node["openstack"]["block-storage"]["volume"]["default_volume_type"] %>
 
 ######## defined in cinder.volume.netapp ########
 
