The default has a capital s
This a superfluous change, but hell I keep seeing it in the diff
during the converge.

Change-Id: I6381494943b4faef0f375962181d70d52d3c8868

--- a/templates/default/api-paste.ini.erb
+++ b/templates/default/api-paste.ini.erb
@@ -1,7 +1,7 @@
 <%= node["openstack"]["block-storage"]["custom_template_banner"] %>
 
 #############
-# Openstack #
+# OpenStack #
 #############
 
 [composite:osapi_volume]
