--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -385,8 +385,10 @@ amqp_auto_delete=<%= node['openstack']['mq']['block-storage']['auto_delete'] %>
 
 ######## defined in cinder.openstack.common.rpc.impl_kombu ########
 
-# kombu_ssl_version=
+<% if node["openstack"]["mq"]["block-storage"]["rabbit"]["use_ssl"] && node["openstack"]["mq"]["block-storage"]["rabbit"]["kombu_ssl_version"] %>
+kombu_ssl_version=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["kombu_ssl_version"] %>
 #### (StrOpt) SSL version to use (valid only if SSL enabled)
+<% end -%>
 
 # kombu_ssl_keyfile=
 #### (StrOpt) SSL key file (valid only if SSL enabled)
