Use identity_uri_transform
Remove deprecated keys and use identity_uri via the new transform
helper method.

Also, cleanup specs for endpoint testing to make sure Common is
fully tested.

Change-Id: I5a26d8cb83193e4bf66bb952f7973838d6acba40
Implements: blueprint identity-uri

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -1080,29 +1080,13 @@ enabled_backends = <%= @multi_backend_sections.keys.join(',') %>
 # Options defined in keystonemiddleware.auth_token
 #
 
-# Prefix to prepend at the beginning of the path. Deprecated,
-# use identity_uri. (string value)
-#auth_admin_prefix=
-
-# Host providing the admin Identity API endpoint. Deprecated,
-# use identity_uri. (string value)
-auth_host = <%= @identity_admin_endpoint.host %>
-
-# Port of the admin Identity API endpoint. Deprecated, use
-# identity_uri. (integer value)
-auth_port = <%= @identity_admin_endpoint.port %>
-
-# Protocol of the admin Identity API endpoint (http or https).
-# Deprecated, use identity_uri. (string value)
-auth_protocol = <%= @identity_admin_endpoint.scheme %>
-
 # Complete public Identity API endpoint (string value)
 auth_uri = <%= @auth_uri %>
 
 # Complete admin Identity API endpoint. This should specify
 # the unversioned root endpoint e.g. https://localhost:35357/
 # (string value)
-#identity_uri=<None>
+identity_uri = <%= @identity_uri %>
 
 # API version of the admin Identity API endpoint (string
 # value)
