--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -10,8 +10,6 @@ debug=<%= node["openstack"]["block-storage"]["debug"] %>
 verbose=<%= node["openstack"]["block-storage"]["verbose"] %>
 #### (BoolOpt) Print more verbose output
 
-# lock_path
-lock_path=<%= node["openstack"]["block-storage"]["lock_path"] %>
 notification_driver=<%= node["openstack"]["block-storage"]["notification_driver"] %>
 
 # log_config=<None>
@@ -51,17 +49,14 @@ log_file = /var/log/cinder/cinder.log
 #### (StrOpt) Virtualization api connection type : libvirt, xenapi, or
 ####          fake
 
-sql_connection=<%= @sql_connection %>
-# sql_connection=sqlite:///$state_path/$sqlite_db
-#### (StrOpt) The SQLAlchemy connection string used to connect to the
-####          database
-
-# sql_connection_debug=0
-#### (IntOpt) Verbosity of SQL debugging information. 0=None,
-####          100=Everything
-
 # api_paste_config=api-paste.ini
 #### (StrOpt) File name for the paste.deploy config for cinder-api
+
+# DEPRECATED: Deploy v1 of the Cinder API. (boolean value)
+enable_v1_api=false
+
+# Deploy v2 of the Cinder API. (boolean value)
+enable_v2_api=true
 
 # pybasedir=/usr/lib/python/site-packages
 #### (StrOpt) Directory where the cinder python module is installed
@@ -276,9 +271,6 @@ osapi_volume_workers=<%= node["openstack"]["block-storage"]["osapi_volume_worker
 
 ######## defined in cinder.db.api ########
 
-db_backend=sqlalchemy
-#### (StrOpt) The backend to use for db
-
 # enable_new_services=true
 #### (BoolOpt) Services to be added to the available pool on create
 
@@ -355,15 +347,9 @@ control_exchange=<%=node['openstack']['block-storage']['control_exchange']%>
 #### (StrOpt) AMQP exchange to connect to if using RabbitMQ or Qpid
 
 rpc_thread_pool_size=<%= node["openstack"]["block-storage"]["rpc_thread_pool_size"] %>
-
 #### (IntOpt) Size of RPC thread pool
 
-rpc_conn_pool_size=<%= node["openstack"]["block-storage"]["rpc_conn_pool_size"] %>
-
-#### (IntOpt) Size of RPC connection pool
-
 rpc_response_timeout=<%= node["openstack"]["block-storage"]["rpc_response_timeout"] %>
-
 #### (IntOpt) Seconds to wait for a response from call or multicall
 
 # rpc_cast_timeout=30
@@ -373,131 +359,6 @@ rpc_response_timeout=<%= node["openstack"]["block-storage"]["rpc_response_timeou
 # allowed_rpc_exception_modules=cinder.openstack.common.exception,nova.exception,cinder.exception
 #### (ListOpt) Modules of exceptions that are permitted to be recreatedupon
 ####           receiving exception data from an rpc call.
-
-# from oslo/messaging/_drivers/amqp.py
-amqp_durable_queues=<%= node['openstack']['mq']['block-storage']['durable_queues'] %>
-amqp_auto_delete=<%= node['openstack']['mq']['block-storage']['auto_delete'] %>
-
-<% if @mq_service_type == "rabbitmq"  %>
-
-# fake_rabbit=false
-#### (BoolOpt) If passed, use a fake RabbitMQ provider
-
-######## defined in cinder.openstack.common.rpc.impl_kombu ########
-
-<% if node["openstack"]["mq"]["block-storage"]["rabbit"]["use_ssl"] && node["openstack"]["mq"]["block-storage"]["rabbit"]["kombu_ssl_version"] %>
-kombu_ssl_version=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["kombu_ssl_version"] %>
-#### (StrOpt) SSL version to use (valid only if SSL enabled)
-<% end -%>
-
-# kombu_ssl_keyfile=
-#### (StrOpt) SSL key file (valid only if SSL enabled)
-
-# kombu_ssl_certfile=
-#### (StrOpt) SSL cert file (valid only if SSL enabled)
-
-# kombu_ssl_ca_certs=
-#### (StrOpt) SSL certification authority file (valid only if SSL enabled)
-
-<% if node["openstack"]["mq"]["block-storage"]["rabbit"]["ha"] -%>
-rabbit_hosts=<%= @rabbit_hosts %>
-#### (ListOpt) RabbitMQ HA cluster host:port pairs
-
-# rabbit_durable_queues=false
-#### (BoolOpt) use durable queues in RabbitMQ
-
-rabbit_ha_queues=True
-#### (BoolOpt) use H/A queues in RabbitMQ (x-ha-policy: all).You need to
-####           wipe RabbitMQ database when changing this option.
-<% else -%>
-rabbit_host=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["host"] %>
-#### (StrOpt) The RabbitMQ broker address where a single node is used
-
-rabbit_port=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["port"] %>
-#### (IntOpt) The RabbitMQ broker port where a single node is used
-<% end -%>
-
-rabbit_use_ssl=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["use_ssl"] %>
-#### (BoolOpt) connect over SSL for RabbitMQ
-
-rabbit_userid=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["userid"] %>
-#### (StrOpt) the RabbitMQ userid
-
-rabbit_password=<%= @mq_password %>
-#### (StrOpt) the RabbitMQ password
-
-rabbit_virtual_host=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["vhost"] %>
-#### (StrOpt) the RabbitMQ virtual host
-
-notification_topics=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["notification_topic"] %>
-#### (ListOpt) AMQP topic used for openstack notifications
-
-# rabbit_retry_interval=1
-#### (IntOpt) how frequently to retry connecting with RabbitMQ
-
-# rabbit_retry_backoff=2
-#### (IntOpt) how long to backoff for between retries when connecting to
-####          RabbitMQ
-
-# rabbit_max_retries=0
-#### (IntOpt) maximum retries with trying to connect to RabbitMQ (the
-####          default of 0 implies an infinite retry count)
-
-<% end %>
-
-
-<% if @mq_service_type == "qpid"  %>
-
-##### QPID #####
-######## defined in cinder.openstack.common.rpc.impl_qpid ########
-qpid_hostname=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["host"] %>
-#### (StrOpt) Qpid broker hostname
-
-qpid_port=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["port"] %>
-#### (StrOpt) Qpid broker port
-
-qpid_username=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["username"] %>
-#### (StrOpt) Username for qpid connection
-
-qpid_password=<%= @mq_password %>
-#### (StrOpt) Password for qpid connection
-
-qpid_sasl_mechanisms=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["sasl_mechanisms"] %>
-#### (StrOpt) Space separated list of SASL mechanisms to use for auth
-
-qpid_reconnect=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect"] %>
-#### (BoolOpt) Automatically reconnect
-
-qpid_reconnect_timeout=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_timeout"] %>
-#### (IntOpt) Reconnection timeout in seconds
-
-qpid_reconnect_limit=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_limit"] %>
-#### (IntOpt) Max reconnections before giving up
-
-qpid_reconnect_interval_min=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_interval_min"] %>
-#### (IntOpt) Minimum seconds between reconnection attempts
-
-qpid_reconnect_interval_max=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_interval_max"] %>
-#### (IntOpt) Maximum seconds between reconnection attempts
-
-qpid_reconnect_interval=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_interval"] %>
-#### (IntOpt) Equivalent to setting max and min to the same value
-
-qpid_heartbeat=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["heartbeat"] %>
-#### (IntOpt) Seconds between connection keepalive heartbeats
-
-qpid_protocol=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["protocol"] %>
-#### (StrOpt) Transport to use, either 'tcp' or 'ssl'
-
-qpid_tcp_nodelay=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["tcp_nodelay"] %>
-#### (BoolOpt) Disable Nagle algorithm
-
-qpid_topology_version=<%= node['openstack']['mq']['block-storage']['qpid']['topology_version'] %>
-#### (IntOpt) See oslo/messaging/_drivers/impl_qpid.py for details
-
-notification_topics=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["notification_topic"] %>
-#### (ListOpt) AMQP topic used for openstack notifications
-<% end %>
 
 
 ######## defined in cinder.openstack.common.rpc.impl_zmq ########
@@ -1074,6 +935,25 @@ enabled_backends = <%= @multi_backend_sections.keys.join(',') %>
 <% end %>
 <% end %>
 
+[database]
+
+#
+# Options defined in oslo.db
+#
+
+backend=sqlalchemy
+#### (StrOpt) The backend to use for db
+
+connection=<%= @sql_connection %>
+# sql_connection=sqlite:///$state_path/$sqlite_db
+#### (StrOpt) The SQLAlchemy connection string used to connect to the
+####          database
+
+# sql_connection_debug=0
+#### (IntOpt) Verbosity of SQL debugging information. 0=None,
+####          100=Everything
+
+
 [keystone_authtoken]
 
 #
@@ -1227,3 +1107,156 @@ memcache_secret_key = <%= node['openstack']['block-storage']['api']['auth']['mem
 # (list value)
 #hash_algorithms=md5
 hash_algorithms = <%= node['openstack']['block-storage']['api']['auth']['hash_algorithms'] %>
+
+
+[oslo_concurrency]
+
+# lock_path
+lock_path=<%= node["openstack"]["block-storage"]["lock_path"] %>
+
+
+<% if @mq_service_type == "qpid"  %>
+[oslo_messaging_qpid]
+
+#
+# From oslo.messaging
+#
+
+# from oslo/messaging/_drivers/amqp.py
+amqp_durable_queues=<%= node['openstack']['mq']['block-storage']['durable_queues'] %>
+amqp_auto_delete=<%= node['openstack']['mq']['block-storage']['auto_delete'] %>
+
+rpc_conn_pool_size=<%= node["openstack"]["block-storage"]["rpc_conn_pool_size"] %>
+
+#### (IntOpt) Size of RPC connection pool
+
+##### QPID #####
+######## defined in cinder.openstack.common.rpc.impl_qpid ########
+qpid_hostname=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["host"] %>
+#### (StrOpt) Qpid broker hostname
+
+qpid_port=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["port"] %>
+#### (StrOpt) Qpid broker port
+
+qpid_username=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["username"] %>
+#### (StrOpt) Username for qpid connection
+
+qpid_password=<%= @mq_password %>
+#### (StrOpt) Password for qpid connection
+
+qpid_sasl_mechanisms=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["sasl_mechanisms"] %>
+#### (StrOpt) Space separated list of SASL mechanisms to use for auth
+
+qpid_reconnect=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect"] %>
+#### (BoolOpt) Automatically reconnect
+
+qpid_reconnect_timeout=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_timeout"] %>
+#### (IntOpt) Reconnection timeout in seconds
+
+qpid_reconnect_limit=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_limit"] %>
+#### (IntOpt) Max reconnections before giving up
+
+qpid_reconnect_interval_min=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_interval_min"] %>
+#### (IntOpt) Minimum seconds between reconnection attempts
+
+qpid_reconnect_interval_max=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_interval_max"] %>
+#### (IntOpt) Maximum seconds between reconnection attempts
+
+qpid_reconnect_interval=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["reconnect_interval"] %>
+#### (IntOpt) Equivalent to setting max and min to the same value
+
+qpid_heartbeat=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["heartbeat"] %>
+#### (IntOpt) Seconds between connection keepalive heartbeats
+
+qpid_protocol=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["protocol"] %>
+#### (StrOpt) Transport to use, either 'tcp' or 'ssl'
+
+qpid_tcp_nodelay=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["tcp_nodelay"] %>
+#### (BoolOpt) Disable Nagle algorithm
+
+qpid_topology_version=<%= node['openstack']['mq']['block-storage']['qpid']['topology_version'] %>
+#### (IntOpt) See oslo/messaging/_drivers/impl_qpid.py for details
+
+notification_topics=<%= node["openstack"]["mq"]["block-storage"]["qpid"]["notification_topic"] %>
+#### (ListOpt) AMQP topic used for openstack notifications
+<% end %>
+
+<% if @mq_service_type == "rabbitmq"  %>
+[oslo_messaging_rabbit]
+
+#
+# From oslo.messaging
+#
+
+# from oslo/messaging/_drivers/amqp.py
+amqp_durable_queues=<%= node['openstack']['mq']['block-storage']['durable_queues'] %>
+amqp_auto_delete=<%= node['openstack']['mq']['block-storage']['auto_delete'] %>
+
+rpc_conn_pool_size=<%= node["openstack"]["block-storage"]["rpc_conn_pool_size"] %>
+
+#### (IntOpt) Size of RPC connection pool
+
+# fake_rabbit=false
+#### (BoolOpt) If passed, use a fake RabbitMQ provider
+
+######## defined in cinder.openstack.common.rpc.impl_kombu ########
+
+<% if node["openstack"]["mq"]["block-storage"]["rabbit"]["use_ssl"] && node["openstack"]["mq"]["block-storage"]["rabbit"]["kombu_ssl_version"] %>
+kombu_ssl_version=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["kombu_ssl_version"] %>
+#### (StrOpt) SSL version to use (valid only if SSL enabled)
+<% end -%>
+
+# kombu_ssl_keyfile=
+#### (StrOpt) SSL key file (valid only if SSL enabled)
+
+# kombu_ssl_certfile=
+#### (StrOpt) SSL cert file (valid only if SSL enabled)
+
+# kombu_ssl_ca_certs=
+#### (StrOpt) SSL certification authority file (valid only if SSL enabled)
+
+<% if node["openstack"]["mq"]["block-storage"]["rabbit"]["ha"] -%>
+rabbit_hosts=<%= @rabbit_hosts %>
+#### (ListOpt) RabbitMQ HA cluster host:port pairs
+
+# rabbit_durable_queues=false
+#### (BoolOpt) use durable queues in RabbitMQ
+
+rabbit_ha_queues=True
+#### (BoolOpt) use H/A queues in RabbitMQ (x-ha-policy: all).You need to
+####           wipe RabbitMQ database when changing this option.
+<% else -%>
+rabbit_host=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["host"] %>
+#### (StrOpt) The RabbitMQ broker address where a single node is used
+
+rabbit_port=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["port"] %>
+#### (IntOpt) The RabbitMQ broker port where a single node is used
+<% end -%>
+
+rabbit_use_ssl=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["use_ssl"] %>
+#### (BoolOpt) connect over SSL for RabbitMQ
+
+rabbit_userid=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["userid"] %>
+#### (StrOpt) the RabbitMQ userid
+
+rabbit_password=<%= @mq_password %>
+#### (StrOpt) the RabbitMQ password
+
+rabbit_virtual_host=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["vhost"] %>
+#### (StrOpt) the RabbitMQ virtual host
+
+notification_topics=<%= node["openstack"]["mq"]["block-storage"]["rabbit"]["notification_topic"] %>
+#### (ListOpt) AMQP topic used for openstack notifications
+
+# rabbit_retry_interval=1
+#### (IntOpt) how frequently to retry connecting with RabbitMQ
+
+# rabbit_retry_backoff=2
+#### (IntOpt) how long to backoff for between retries when connecting to
+####          RabbitMQ
+
+# rabbit_max_retries=0
+#### (IntOpt) maximum retries with trying to connect to RabbitMQ (the
+####          default of 0 implies an infinite retry count)
+
+<% end %>
